# SolisPhysics

./: .clang-format  README.md  build.zig  meson.build
Source/: Collider2D.c  Collider2D.h  CollisionShapes2D.c  CollisionShapes2D.h  Defines.h  Defines.hh  Main.c  Math.c  Math.h  Math.hh  PhysicsWorld.hh  RigidBody.hh  Test.cc
Source/Collision/: Contact.hh  ContactSphereSphere.hh
Source/Dynamics/: RigidBody.cc  RigidBody.hh
Source/Shape/: CompositeShape.hh  Cuboid.hh  IShape.hh  Sphere.hh
Test/: Collision.cc
src/: collider_2d.zig  collision_shapes_2d.zig  main.zig  physics_world.zig  transform.zig  vec2.zig
